@@ -138,6 +138,7 @@ STDMETHODIMP CParameterCollection::Count( long * itemsCount )
 STDMETHODIMP CParameterCollection::Item( VARIANT id, LPDISPATCH * Item )
 {
 	PANTHEIOS_TRACE_INFORMATIONAL(PSTR("Entering"));
+
 // 	CComPtr<IParameterCollection> ptmpIParameterCollection(pa);
 // 	*Item = ptmpIUnitPort.Detach();
 // 	PANTHEIOS_TRACE_DEBUG(	PSTR("IUnitPort pointer passed to PME: "), 
