@@ -10,20 +10,20 @@
 #ifndef VERSIONNO__H
 #define VERSIONNO__H
 
-#define VERSION_FULL           0.5.267.319
+#define VERSION_FULL           0.5.267.322
 
 #define VERSION_BASEYEAR       2013
 #define VERSION_DATE           "2013-09-25"
-#define VERSION_TIME           "13:20:06"
+#define VERSION_TIME           "16:08:32"
 
 #define VERSION_MAJOR          0
 #define VERSION_MINOR          5
 #define VERSION_BUILDNO        267
-#define VERSION_EXTEND         319
+#define VERSION_EXTEND         322
 
-#define VERSION_FILE           0,5,267,319
-#define VERSION_PRODUCT        0,5,267,319
-#define VERSION_FILESTR        "0,5,267,319"
-#define VERSION_PRODUCTSTR     "0,5,267,319"
+#define VERSION_FILE           0,5,267,322
+#define VERSION_PRODUCT        0,5,267,322
+#define VERSION_FILESTR        "0,5,267,322"
+#define VERSION_PRODUCTSTR     "0,5,267,322"
 
 #endif
